--- a/web/static/css/shared.css
+++ b/web/static/css/shared.css
@@ -806,6 +806,7 @@ tbody tr:hover {
 }
 
 .success-message {
+    display: none;
     background: #F0FDF4;
     border: 1px solid #BBF7D0;
     color: #16A34A;
